build_log.txt

> shoe-manufacturing-react@0.0.0 build
> vite build

[36mvite v8.0.0 [32mbuilding client environment for production...[36m[39m
[2Ktransforming...✓ 436 modules transformed.
[31m✗[39m Build failed in 5.65s
[31merror during build:
[31mBuild failed with 1 error:

[plugin @rolldown/plugin-babel] C:/Users/cvalley/OneDrive/Desktop/shoe-manufacturing-react - Copy/src/pages/artisan/ArtisanProductionUpdate.jsx:63:2
RolldownError: [BabelError] C:\Users\cvalley\OneDrive\Desktop\shoe-manufacturing-react - Copy\src\pages\artisan\ArtisanProductionUpdate.jsx: 'return' outside of function. (63:2)

[0m [90m 61 |[31m   }[33m;[31m
 [90m 62 |[31m
[31m[1m>[22m[31m[90m 63 |[31m   [36mreturn[31m (
 [90m    |[31m   [31m[1m^[22m[31m
 [90m 64 |[31m     [33m<[31m[33mdiv[31m className[33m=[31m[32m"min-vh-100 bg-background-light font-display text-dark lg:pb-20"[31m[33m>[31m
 [90m 65 |[31m       {[90m/* Sticky Premium Header */[31m}
 [90m 66 |[31m       [33m<[31m[33mheader[31m className[33m=[31m[32m"bg-white/80 backdrop-blur-xl border-bottom border-stone-200 px-6 lg:px-12 py-6 sticky-top z-40 shadow-sm animate-in slide-in-from-top duration-700"[31m[33m>[31m[0m
    at error (file:///C:/Users/cvalley/OneDrive/Desktop/shoe-manufacturing-react%20-%20Copy/node_modules/rolldown/dist/shared/logs-D80CXhvg.mjs:147:24)
    at TransformPluginContextImpl.error (file:///C:/Users/cvalley/OneDrive/Desktop/shoe-manufacturing-react%20-%20Copy/node_modules/rolldown/dist/shared/bindingify-input-options-Cu7pt6SZ.mjs:967:10)
    at TransformPluginContextImpl.handler (file:///C:/Users/cvalley/OneDrive/Desktop/shoe-manufacturing-react%20-%20Copy/node_modules/@rolldown/plugin-babel/dist/index.mjs:419:11)
    at async plugin (file:///C:/Users/cvalley/OneDrive/Desktop/shoe-manufacturing-react%20-%20Copy/node_modules/rolldown/dist/shared/bindingify-input-options-Cu7pt6SZ.mjs:1106:16)
    at async plugin.<computed> (file:///C:/Users/cvalley/OneDrive/Desktop/shoe-manufacturing-react%20-%20Copy/node_modules/rolldown/dist/shared/bindingify-input-options-Cu7pt6SZ.mjs:1570:12)
Caused by:
  SyntaxError: C:\Users\cvalley\OneDrive\Desktop\shoe-manufacturing-react - Copy\src\pages\artisan\ArtisanProductionUpdate.jsx: 'return' outside of function. (63:2)
  
  [0m [90m 61 |[31m   }[33m;[31m
   [90m 62 |[31m
  [31m[1m>[22m[31m[90m 63 |[31m   [36mreturn[31m (
   [90m    |[31m   [31m[1m^[22m[31m
   [90m 64 |[31m     [33m<[31m[33mdiv[31m className[33m=[31m[32m"min-vh-100 bg-background-light font-display text-dark lg:pb-20"[31m[33m>[31m
   [90m 65 |[31m       {[90m/* Sticky Premium Header */[31m}
   [90m 66 |[31m       [33m<[31m[33mheader[31m className[33m=[31m[32m"bg-white/80 backdrop-blur-xl border-bottom border-stone-200 px-6 lg:px-12 py-6 sticky-top z-40 shadow-sm animate-in slide-in-from-top duration-700"[31m[33m>[31m[0m
      at constructor (C:\Users\cvalley\OneDrive\Desktop\shoe-manufacturing-react - Copy\node_modules\@babel\parser\lib\index.js:365:19)
      at JSXParserMixin.raise (C:\Users\cvalley\OneDrive\Desktop\shoe-manufacturing-react - Copy\node_modules\@babel\parser\lib\index.js:6599:19)
      at JSXParserMixin.parseReturnStatement (C:\Users\cvalley\OneDrive\Desktop\shoe-manufacturing-react - Copy\node_modules\@babel\parser\lib\index.js:13136:12)
      at JSXParserMixin.parseStatementContent (C:\Users\cvalley\OneDrive\Desktop\shoe-manufacturing-react - Copy\node_modules\@babel\parser\lib\index.js:12798:21)
      at JSXParserMixin.parseStatementLike (C:\Users\cvalley\OneDrive\Desktop\shoe-manufacturing-react - Copy\node_modules\@babel\parser\lib\index.js:12767:17)
      at JSXParserMixin.parseModuleItem (C:\Users\cvalley\OneDrive\Desktop\shoe-manufacturing-react - Copy\node_modules\@babel\parser\lib\index.js:12744:17)
      at JSXParserMixin.parseBlockOrModuleBlockBody (C:\Users\cvalley\OneDrive\Desktop\shoe-manufacturing-react - Copy\node_modules\@babel\parser\lib\index.js:13316:36)
      at JSXParserMixin.parseBlockBody (C:\Users\cvalley\OneDrive\Desktop\shoe-manufacturing-react - Copy\node_modules\@babel\parser\lib\index.js:13309:10)
      at JSXParserMixin.parseProgram (C:\Users\cvalley\OneDrive\Desktop\shoe-manufacturing-react - Copy\node_modules\@babel\parser\lib\index.js:12622:10)
      at JSXParserMixin.parseTopLevel (C:\Users\cvalley\OneDrive\Desktop\shoe-manufacturing-react - Copy\node_modules\@babel\parser\lib\index.js:12612:25)
      at JSXParserMixin.parse (C:\Users\cvalley\OneDrive\Desktop\shoe-manufacturing-react - Copy\node_modules\@babel\parser\lib\index.js:14488:25)
      at parse (C:\Users\cvalley\OneDrive\Desktop\shoe-manufacturing-react - Copy\node_modules\@babel\parser\lib\index.js:14522:38)
      at parser (C:\Users\cvalley\OneDrive\Desktop\shoe-manufacturing-react - Copy\node_modules\@babel\core\lib\parser\index.js:41:34)
      at parser.next (<anonymous>)
      at normalizeFile (C:\Users\cvalley\OneDrive\Desktop\shoe-manufacturing-react - Copy\node_modules\@babel\core\lib\transformation\normalize-file.js:64:37)
      at normalizeFile.next (<anonymous>)
      at run (C:\Users\cvalley\OneDrive\Desktop\shoe-manufacturing-react - Copy\node_modules\@babel\core\lib\transformation\index.js:22:50)
      at run.next (<anonymous>)
      at transform (C:\Users\cvalley\OneDrive\Desktop\shoe-manufacturing-react - Copy\node_modules\@babel\core\lib\transform.js:22:33)
      at transform.next (<anonymous>)
      at step (C:\Users\cvalley\OneDrive\Desktop\shoe-manufacturing-react - Copy\node_modules\gensync\index.js:261:32)
      at C:\Users\cvalley\OneDrive\Desktop\shoe-manufacturing-react - Copy\node_modules\gensync\index.js:273:13
      at async.call.result.err.err (C:\Users\cvalley\OneDrive\Desktop\shoe-manufacturing-react - Copy\node_modules\gensync\index.js:223:11)
      at C:\Users\cvalley\OneDrive\Desktop\shoe-manufacturing-react - Copy\node_modules\gensync\index.js:189:28
      at C:\Users\cvalley\OneDrive\Desktop\shoe-manufacturing-react - Copy\node_modules\@babel\core\lib\gensync-utils\async.js:67:7
      at C:\Users\cvalley\OneDrive\Desktop\shoe-manufacturing-react - Copy\node_modules\gensync\index.js:113:33
      at step (C:\Users\cvalley\OneDrive\Desktop\shoe-manufacturing-react - Copy\node_modules\gensync\index.js:287:14)
      at C:\Users\cvalley\OneDrive\Desktop\shoe-manufacturing-react - Copy\node_modules\gensync\index.js:273:13
      at async.call.result.err.err (C:\Users\cvalley\OneDrive\Desktop\shoe-manufacturing-react - Copy\node_modules\gensync\index.js:223:11)
      at C:\Users\cvalley\OneDrive\Desktop\shoe-manufacturing-react - Copy\node_modules\gensync\index.js:37:40[31m
    at aggregateBindingErrorsIntoJsError (file:///C:/Users/cvalley/OneDrive/Desktop/shoe-manufacturing-react%20-%20Copy/node_modules/rolldown/dist/shared/error-CP8smW_P.mjs:48:18)
    at unwrapBindingResult (file:///C:/Users/cvalley/OneDrive/Desktop/shoe-manufacturing-react%20-%20Copy/node_modules/rolldown/dist/shared/error-CP8smW_P.mjs:18:128)
    at #build (file:///C:/Users/cvalley/OneDrive/Desktop/shoe-manufacturing-react%20-%20Copy/node_modules/rolldown/dist/shared/rolldown-build-4YnQkA76.mjs:3311:34)
    at async buildEnvironment (file:///C:/Users/cvalley/OneDrive/Desktop/shoe-manufacturing-react%20-%20Copy/node_modules/vite/dist/node/chunks/node.js:32794:64)
    at async Object.build (file:///C:/Users/cvalley/OneDrive/Desktop/shoe-manufacturing-react%20-%20Copy/node_modules/vite/dist/node/chunks/node.js:33216:19)
    at async Object.buildApp (file:///C:/Users/cvalley/OneDrive/Desktop/shoe-manufacturing-react%20-%20Copy/node_modules/vite/dist/node/chunks/node.js:33213:153)
    at async CAC.<anonymous> (file:///C:/Users/cvalley/OneDrive/Desktop/shoe-manufacturing-react%20-%20Copy/node_modules/vite/dist/node/cli.js:778:3) {
  errors: [Getter/Setter]
}[39m
